@@ -28,6 +28,7 @@
 	<property name="src.java.test" value="src/java/test"/>
 	<property name="src.c" value="src/c"/>
 	<property name="src.xdocs" value="src/xdocs"/>
+	<property name="nailgun-version.properties" value="${src.java.prod}/com/martiansoftware/nailgun/nailgun-version.properties"/>
 	
 	<property name="build" value="build/ant"/>
 	<property name="build.prod" value="${build}/prod"/>
@@ -60,7 +61,40 @@
 		<delete file="jcoverage.ser"/>
 	</target>
 		
-	<target name="compile-server">
+	<!-- updates version numbers in client and server code
+		 based upon ${version} property.  If the version has
+		 not changed since the last build, sources remain untouched. -->
+	<target name="updateVersionInfo" if="version.changed">
+		<echo>Updating version in nailgun-version.properties.</echo>
+		<propertyfile
+		    file="${nailgun-version.properties}"
+		    comment="Automatically generated by Ant build script.">
+			<entry  key="version" value="${version}"/>
+		</propertyfile>
+		
+		<echo>Updating NAILGUN_VERSION constant in ng.c</echo>
+		<replaceregexp file="${src.c}/ng.c"
+			match="#define NAILGUN_VERSION .*"
+             replace = "#define NAILGUN_VERSION &quot;${version}&quot;"
+            byline="true"/>
+		
+	</target>
+	
+	<target name="init">
+		<!-- check the current nailgun.properties file
+			 in the com.martiansoftware.nailgun package.
+			 if the version number in that file is different
+			 from this version, update the sourc files accordingly -->
+		<property file="${nailgun-version.properties}" prefix="last"/>
+		<condition property="version.changed">
+			<not>
+				<equals arg1="${last.version}" arg2="${version}"/>
+			</not>
+		</condition>
+		<antcall target="updateVersionInfo"/>
+	</target>
+		
+	<target name="compile-server" depends="init">
 		<mkdir dir="${build.prod}"/>
 		<mkdir dir="${build.debug}"/>
 		<mkdir dir="${build.test}"/>
@@ -85,7 +119,7 @@
 		</javac>
 	</target>
 		
-	<target name="compile-client">
+	<target name="compile-client" depends="init">
 		<exec executable="make">
 			<arg line="ng"/>
 
