@@ -18,6 +18,8 @@
 
 package com.martiansoftware.nailgun;
 
+import java.util.Properties;
+
 /**
  * Just a simple holder for various NailGun-related contants.
  * 
@@ -84,4 +86,23 @@ public class NGConstants {
 	 * Chunk type marker for client exit chunks
 	 */	
 	public static final char CHUNKTYPE_EXIT = 'X';
+	
+	/**
+	 * Server version number
+	 */
+	public static final String VERSION;
+	
+	/**
+	 * Loads the version number from a file generated by Ant.
+	 */
+	static {
+		Properties props = new Properties();
+		try {
+			props.load(NGConstants.class.getClassLoader().getResourceAsStream("com/martiansoftware/nailgun/nailgun-version.properties"));
+		} catch (java.io.IOException e) {
+			System.err.println("Unable to load nailgun-version.properties.");
+		}
+		VERSION = props.getProperty("version", "UNKNOWN");
+	}
+	
 }
