@@ -10,3 +10,5 @@ ng-stop.desc=Shuts down the nailgun server
 ng-stats=com.martiansoftware.nailgun.builtins.NGServerStats
 ng-stats.desc=Displays nail statistics
 
+ng-version=com.martiansoftware.nailgun.builtins.NGVersion
+ng-version.desc=Displays the server version number.
