@@ -1,0 +1,3 @@
+#Automatically generated by Ant build script.
+#Sat Dec 04 21:48:27 EST 2004
+version=0.7
